# LearnOpenGL

./: Application.cpp  Application.h  CMakeLists.txt  README.md  Shader.h  Texture.cpp  Texture.h  Triangle.cpp  Triangle.h  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
glfw/include/GLFW/: glfw3.h
glfw/src/: win32_platform.h
resources/shader/: TextureFrag.fx  TextureVert.fx  frag.fx  vert.fx
